<resources>
    <string name="app_name">MachineProject</string>
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_status">Status</string>
    <string name="title_account">Settings</string>
    <string name="home_heading">Pomodoro Coach</string>
    <string name="work_phase_label">Focus</string>
    <string name="short_break_label">Short Break</string>
    <string name="long_break_label">Long Break</string>
    <string name="completed_sessions_placeholder">You have not completed a session yet</string>
    <string name="completed_sessions_label">Completed sessions: %1$d</string>
    <string name="long_break_progress_placeholder">Cycle: 0 / 4 to long break</string>
    <string name="long_break_progress_label">Cycle: %1$d / %2$d to long break</string>
    <string name="in_long_break_label">Long break in progress</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>
    <string name="stop_button">Stop</string>
    <string name="settings_heading">Timer Settings</string>
    <string name="pomodoro_settings_heading">Durations</string>
    <string name="pomodoro_length_label">Work Length</string>
    <string name="pomodoro_alarm_label">Work Alarm</string>
    <string name="break_alarm_label">Break Alarm</string>
    <string name="alarm_settings_heading">Alarm Sounds</string>
</resources>
